--- a/MTDS.Web/Views/Home/Home.cshtml
+++ b/MTDS.Web/Views/Home/Home.cshtml
@@ -47,7 +47,7 @@
                     </a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a class="J_menuItem" href="index_v1.html" data-index="0">设备维护</a>
+                            <a class="J_menuItem" href="../property/property" data-index="0">设备维护</a>
                         </li>
                         <li>
                             <a class="J_menuItem" href="index_v2.html">设备属性维护</a>
@@ -180,7 +180,7 @@
                     <a href="#"><i class="fa fa-cutlery"></i> <span class="nav-label">系统设置 </span><span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a class="J_menuItem" href="form_builder.html">用户管理</a>
+                            <a class="J_menuItem" href="../user/index">用户管理</a>
                         </li>
                         <li>
                             <a class="J_menuItem" href="form_builder.html">权限管理</a>
