--- a/MTDS.Web/Views/Property/Property.cshtml
+++ b/MTDS.Web/Views/Property/Property.cshtml
@@ -3,16 +3,30 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<link href="~/css/font-awesome.css?v=4.4.0" rel="stylesheet">
+<link href="~/css/plugins/jsTree/style.min.css" rel="stylesheet">
+<link href="~/css/animate.css" rel="stylesheet">
+<link href="~/css/style.css?v=4.1.0" rel="stylesheet">
 <script src="~/js/plugins/jeditable/jquery.jeditable.js"></script>
 <!-- Data Tables -->
 <script src="~/js/plugins/dataTables/jquery.dataTables.js"></script>
 <script src="~/js/plugins/dataTables/dataTables.bootstrap.js"></script>
 <!-- 自定义js -->
 <script src="~/js/content.js?v=1.0.0"></script>
+<!-- jsTree plugin javascript -->
+<script src="~/js/plugins/jsTree/jstree.min.js"></script>
 <style>
     .dataTable th {   
     white-space: nowrap !important;  
 }  
+
+.jstree-open > .jstree-anchor > .fa-folder:before {
+    content: "\f07c";
+}
+
+.jstree-default .jstree-icon.none {
+    width: 0;
+}
 </style>
 <script type="text/javascript">
     //删除属性文本框
@@ -26,8 +40,10 @@
             $("#img_add").prev().prev().val("");
         }
     }
-    function initData() {
-        $.getJSON("../Property/getPropertyList", { id1: 1, assetTypeID: "3CFD0EFE-9CF6-4E65-A369-073DBF2ED1D0" }, function (data) {
+    var oTable;
+    function initData(assetTypeID) {
+     
+        $.getJSON("../Property/getPropertyList", { id1: 1, assetTypeID: assetTypeID }, function (data) {
             if (data != "error") {
                 var str = "";
                 var head_str = "<tr>";
@@ -90,8 +106,11 @@
                 //    str += "</td></tr>";
                 //}
                 //$("#t_body").append(str);
-             
-                var oTable = $('#editable').dataTable({
+                if (oTable != undefined) {
+                    oTable.fnClearTable();
+                    oTable.fnDestroy();
+                }
+                 oTable = $('#editable').dataTable({
                     "ajax": {
                         url: "../Property/getPropertyList?assetTypeID",
                         data: { "assetTypeID": "3CFD0EFE-9CF6-4E65-A369-073DBF2ED1D0" },
@@ -113,27 +132,158 @@
      
         });
     }
+    function GetSubmenu(ModuleId, data) {
+        var submenu = "<ul>";
+        $.each(data, function (i) {
+            if (data[i].ParentId.toUpperCase() == ModuleId.toUpperCase()) {
+                //判断是否还有子级，如果没有，则添加其他样式
+                //var css = "  ";
+                var css = " data-jstree='{\"type\":\"html\"}' onclick=\"initData('"+data[i].ID+"')\" ";
+                $.each(data, function (j) {
+                    if (data[j].ParentId.toUpperCase() == data[i].ID.toUpperCase()) {
+                        css = "";
+                    }
+
+                });
+                submenu += "<li "+css+ " title=" + data[i].Title + ">"
+                submenu +=data[i].Title
+                submenu += GetSubmenu(data[i].ID.toUpperCase(), data);
+                submenu   += "</li>";
+               
+            }
+        });
+        submenu += "</ul>";
+        return submenu;
+    }
     $(document).ready(function () {
-        initData();
+      
+
+     
+            var html = "<ul>";
+            $.getJSON("../Property/getAssetTree", "", function (data) {
+                //accordionJson = eval("(" + data + ")");
+                $.each(data, function (i) {
+                    if (data[i].ParentId.toUpperCase() == '275BB169-02FA-4D83-AE51-C33BE290B9E4') {
+                        html += "<li class='jstree-open'  title=" + data[i].Title + ">";
+
+                        html += data[i].Title
+                        html += GetSubmenu(data[i].ID.toUpperCase(), data);
+                        html += "</li>";
+                    }
+                });
+                html+="</ul>"
+                $("#jstree1").append(html);
+
+                $('#jstree1').jstree({
+                    'core': {
+                        'check_callback': true
+                    },
+                    'plugins': ['types', 'dnd'],
+                    'types': {
+                        'default': {
+                            'icon': 'fa fa-folder'
+                        },
+                        'html': {
+                            'icon': 'fa fa-file-code-o'
+                        },
+                        'svg': {
+                            'icon': 'fa fa-file-picture-o'
+                        },
+                        'css': {
+                            'icon': 'fa fa-file-code-o'
+                        },
+                        'img': {
+                            'icon': 'fa fa-file-image-o'
+                        },
+                        'js': {
+                            'icon': 'fa fa-file-text-o'
+                        }
+
+                    }
+                });
+            })
+         
+        
+        //导航子菜单
+    
+        //$('#jstree1').jstree({
+
+        //    'core': {
+        //        'check_callback': true
+        //    },
+        //    'plugins': ['types', 'dnd'],
+        //    data: function (obj, callback) {
+        //        var jsonstr = "[]";
+        //        var jsonarray = eval('(' + jsonstr + ')');
+        //        $.ajax({
+        //            type: "POST",
+        //            url: "../Property/getAssetTree",
+        //            dataType: "json",
+        //            async: false,
+        //            success: function (result) {
+        //                var arrays = result.data;
+        //                for (var i = 0 ; i < arrays.length; i++) {
+        //                    var arr = {
+        //                        "id": arrays[i].ID,
+        //                        "parent": arrays[i].ParentId == "root" ? "#" : arrays[i].ParentId,
+        //                        "text": arrays[i].Title
+        //                    }
+        //                    jsonarray.push(arr);
+        //                }
+        //            }
+
+        //        });
+        //        callback.call(this, jsonarray);
+        //    },
+        //    'types': {
+        //        'default': {
+        //            'icon': 'fa fa-folder'
+        //        },
+        //        'html': {
+        //            'icon': 'fa fa-file-code-o'
+        //        },
+        //        'svg': {
+        //            'icon': 'fa fa-file-picture-o'
+        //        },
+        //        'css': {
+        //            'icon': 'fa fa-file-code-o'
+        //        },
+        //        'img': {
+        //            'icon': 'fa fa-file-image-o'
+        //        },
+        //        'js': {
+        //            'icon': 'fa fa-file-text-o'
+        //        }
+
+        //    }
+        //});
+   
    
     });
 </script>
 <section id="main-content">
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="ibox float-e-margins">
+    <div class="ibox float-e-margins">
+    <div  style="width:25%;float:left">
+        <div id="jstree1">
+           
+        </div>
+    </div>
+    </div>
+    <div style="width:74%;float:left;overflow:auto">
+  
+            <div class="ibox float-e-margins" style="width:2050px;height:auto">
               
                 <div class="ibox-content">
                     <div class="">
                         <a onclick="fnClickAddRow();" href="javascript:void(0);" class="btn btn-primary ">添加行</a>
                     </div>
-                    <table class="table table-striped table-bordered table-hover " id="editable">
+                    <table class="table table-striped table-bordered table-hover " id="editable" style="width:2000px;">
                         <thead id="t_head">
                           
                         </thead>
                     </table>
                 </div>
-            </div>
+        
         </div>
     </div>
     </div>
