--- a/MTDS.Web/Views/Home/Home.cshtml
+++ b/MTDS.Web/Views/Home/Home.cshtml
@@ -64,26 +64,15 @@
                     </a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a class="J_menuItem" href="graph_echarts.html">百度ECharts</a>
+                            <a class="J_menuItem" href="graph_echarts.html">设备类型统计</a>
                         </li>
                         <li>
-                            <a class="J_menuItem" href="graph_flot.html">Flot</a>
+                            <a class="J_menuItem" href="graph_flot.html">运维费用统计</a>
                         </li>
                         <li>
-                            <a class="J_menuItem" href="graph_morris.html">Morris.js</a>
+                            <a class="J_menuItem" href="graph_morris.html">维护周期统计</a>
                         </li>
-                        <li>
-                            <a class="J_menuItem" href="graph_rickshaw.html">Rickshaw</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="graph_peity.html">Peity</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="graph_sparkline.html">Sparkline</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="graph_metrics.html">图表组合</a>
-                        </li>
+                     
                     </ul>
                 </li>
              
@@ -95,26 +84,9 @@
                     </a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a class="J_menuItem" href="graph_echarts.html">百度ECharts</a>
+                            <a class="J_menuItem" href="graph_echarts.html">设备分布</a>
                         </li>
-                        <li>
-                            <a class="J_menuItem" href="graph_flot.html">Flot</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="graph_morris.html">Morris.js</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="graph_rickshaw.html">Rickshaw</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="graph_peity.html">Peity</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="graph_sparkline.html">Sparkline</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="graph_metrics.html">图表组合</a>
-                        </li>
+                        
                     </ul>
                 </li>
 
@@ -122,65 +94,28 @@
                     <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">运维管理</span><span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a class="J_menuItem" href="form_basic.html">基本表单</a>
+                            <a class="J_menuItem" href="form_basic.html">基本设置</a>
                         </li>
                         <li>
-                            <a class="J_menuItem" href="form_validate.html">表单验证</a>
+                            <a class="J_menuItem" href="form_validate.html">运维流程</a>
                         </li>
                         <li>
-                            <a class="J_menuItem" href="form_advanced.html">高级插件</a>
+                            <a class="J_menuItem" href="form_advanced.html">报表维护</a>
                         </li>
                         <li>
                             <a class="J_menuItem" href="form_wizard.html">表单向导</a>
                         </li>
-                        <li>
-                            <a href="#">文件上传 <span class="fa arrow"></span></a>
-                            <ul class="nav nav-third-level">
-                                <li>
-                                    <a class="J_menuItem" href="form_webuploader.html">百度WebUploader</a>
-                                </li>
-                                <li>
-                                    <a class="J_menuItem" href="form_file_upload.html">DropzoneJS</a>
-                                </li>
-                                <li>
-                                    <a class="J_menuItem" href="form_avatar.html">头像裁剪上传</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">编辑器 <span class="fa arrow"></span></a>
-                            <ul class="nav nav-third-level">
-                                <li>
-                                    <a class="J_menuItem" href="form_editors.html">富文本编辑器</a>
-                                </li>
-                                <li>
-                                    <a class="J_menuItem" href="form_simditor.html">simditor</a>
-                                </li>
-                                <li>
-                                    <a class="J_menuItem" href="form_markdown.html">MarkDown编辑器</a>
-                                </li>
-                                <li>
-                                    <a class="J_menuItem" href="code_editor.html">代码编辑器</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="suggest.html">搜索自动补全</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="layerdate.html">日期选择器layerDate</a>
-                        </li>
+                       
+                       
+                      
                     </ul>
                 </li>
-               
-               
-               
               
                 <li>
                     <a href="#"><i class="fa fa-cutlery"></i> <span class="nav-label">系统设置 </span><span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a class="J_menuItem" href="form_builder.html">用户管理</a>
+                            <a class="J_menuItem" href="../User/Index">用户管理</a>
                         </li>
                         <li>
                             <a class="J_menuItem" href="form_builder.html">权限管理</a>
