--- a/MTDS.Web/Views/User/Index.cshtml
+++ b/MTDS.Web/Views/User/Index.cshtml
@@ -3,123 +3,172 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<link href="~/css/ProList.css" rel="stylesheet" />
-<link href="~/css/lanrenzhijia.css" rel="stylesheet" />
-<link href="/Css/stylep.css" rel="stylesheet" />
-<script src="/Scripts/js.js"></script>
-<style>
-    form {
-        display: inline-block !important;
-        float: right;
+<style type="text/css">
+    /*分页*/
+    .paginator {
     }
 
-    label {
-        margin-top: 0px !important;
+    .paginator a {
+        padding: 5px 10px;
+        display: inline-block;
+        border: 1px solid #e2e2e4;
+        margin-top: 5px;
+    }
+
+    .paginator .cpb, .paginator a:hover {
+        color: #fff;
+        background: #59ace2;
+        border-radius: 3px;
+        -webkit-border-radius: 3px;
+        border: 1px solid #3a9fbc;
+    }
+
+    .page_div {
+        padding: 0px 0;
+        position: absolute;
+        bottom: 10px;
+    }
+
+    .page_div span {
+        line-height: 40px;
+        font-size: 13px;
+    }
+
+    .page_div span strong {
+    }
+
+    .paginator {
+        padding: 0;
     }
 </style>
 
+<link href="~/css/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet">
 
-<section id="main-content">
-    <div class="container-fluid">
-        <div class="row" style="margin-top: 60px;">
-            <ul id="tabs" class="mtab">
-                <li class="current">
-                    <a href="#">用户列表</a>
-                </li>
 
-            </ul>
 
-            <div class="modal-header">
-                <div class="btn_float" style=" margin-left:15px;">
-                    <button class="btn btn-primary green" data-toggle="modal" href="#mymodal" id="btnAdd">添加用户</button>
+
+
+<div class="wrapper wrapper-content animated fadeInRight" style="overflow-x: hidden;padding: 0 5px">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>用户管理</h5>
+                   
+                    <div class="ibox-tools">
+                        <a class="btn btn-primary" style="font-size: 12px; margin-bottom: 0px;!important" data-toggle="modal" href="#mymodal"><span>添加用户</span></a>
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="table_data_tables.html#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+
+                        <ul class="dropdown-menu dropdown-user">
+                            @*<li>
+                                    <a href="table_data_tables.html#">选项1</a>
+                                </li>
+                                <li>
+                                    <a href="table_data_tables.html#">选项2</a>
+                                </li>*@
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
                 </div>
-                <div style="clear:both;"></div>
-            </div>
-            <table class="table table-striped table-hover table-bordered edit_add tb-h" id="tbPro" style="margin-top: 10px;">
-                <thead>
-                <tr>
-                    <th style="width:7%;" class="tab-center">用户名</th>
-                    <th style="width:12%;" class="tab-center">账号</th>
-                    <th style="width:12%;" class="tab-center">Email</th>
-                    <th style="width:20%;" class="tab-center">手机</th>
-                    <th style="width:10%;" class="tab-center">详细地址</th>
-                    <th style="width:10%;" class="tab-center">创建时间</th>
-                    <th style="width:9%;" class="tab-center">操作</th>
-                </tr>
-                </thead>
-                <tbody id="tbody">
+               
+               
+                <div class="ibox-content">
+                    <table class="table table-striped table-bordered table-hover dataTables-example">
+                        <thead>
+                            <tr>
+                                <th style="width:7%;">用户名</th>
+                                <th style="width:12%;">账号</th>
+                                <th style="width:12%;">Email</th>
+                                <th style="width:20%;">手机</th>
+                                <th style="width:10%;">详细地址</th>
+                                <th style="width:10%;">创建时间</th>
+                                <th style="width:9%;">操作</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tbody"></tbody>
 
-                </tbody>
-            </table>
-
-            <div class="col-sm-12 page_div" style="">
-                <span class="col-sm-2 page_total" style="white-space:nowrap">共有数据：<strong id="userCount"></strong> 条</span>
-                <div id="NavLink" class="paginator pd-20 col-sm-10" style="text-align: center"></div>
+                    </table>
+                    <div class="col-sm-12 page_div">
+                        <span class="col-sm-2 page_total" style="white-space:nowrap">共有数据：<strong id="userCount">0</strong> 条</span>
+                        <div id="NavLink" class="paginator pd-20 col-sm-10" style="text-align: center"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</section>
+</div>
 
 
-
-<div class="modal fade" id="mymodal" style="overflow: auto;margin-top: 50px" >
+<div class="modal fade" id="mymodal" style="overflow: auto;margin-top: 50px">
     <div id="myDiv" class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header" style="background-color: #52acee">
                 <button type="button" class="close modal_out" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h4 class="modal-title" id="text_title">添加用户</h4>
             </div>
-            <div class="modal-body" style="height: 320px;">
-
-                <form id="form_regist" class="with_validate">
-                    <input type="hidden" id="HidUId" name="HidUId" runat="server" />
-                    <div class="clearfix">
-
-                        <div class="col-sm-12 detail_form">
-                            <label class="control-label col-sm-3" style="width: 25%">用户姓名:</label>
-                            <div class="form-group  col-sm-9" style="padding: 0; width: 75%">
-                                <input  type="text" class="form-control" name="txtRealName" id="txtRealName"/>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-12 detail_form">
-                            <label class="control-label col-sm-4" style="width: 20%">登录名:</label>
-                            <div class="form-group  col-sm-8" style="padding: 0; width: 80%">
-                                <input type="text" class="form-control" name="txtloginName" id="txtloginName" required="required" data-bv-notempty-message="此项为必填项" />
+            <div class="modal-body" style="height: 370px;">
+                <div class="ibox-content">
+                    <form class="form-horizontal m-t" id="commentForm">
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">姓名：</label>
+                            <div class="col-sm-8">
+                                <input id="txtRealName" name="txtRealName" minlength="2" type="text" class="form-control" required="" aria-required="true">
                             </div>
                         </div>
                         
-                        <div class="col-sm-12 detail_form" id="pss">
-                            <label class="control-label col-sm-4" style="width: 20%">密码:</label>
-                            <div class="form-group  col-sm-8" style="padding: 0; width: 80%">
-                                <input type="password" class="form-control" name="txtPassword" id="txtPassword" required="required" data-bv-notempty-message="此项为必填项" />
-                            </div>
-                        </div>
-
-                        <div class="col-sm-12 detail_form">
-                            <label class="control-label col-sm-4" style="width: 20%">手机:</label>
-                            <div class="form-group  col-sm-8" style="padding: 0; width: 80%">
-                                <input type="text" class="form-control" name="txtTel" id="txtTel" required="required" data-bv-notempty-message="此项为必填项" />
-                            </div>
-                        </div>
-
-                        <div class="col-sm-12 detail_form">
-                            <label class="control-label col-sm-4" style="width: 20%">Email:</label>
-                            <div class="form-group  col-sm-8" style="padding: 0; width: 80%">
-                                <input type="text" class="form-control" name="txtEmail" id="txtEmail" required="required" data-bv-notempty-message="此项为必填项" />
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">登录名：</label>
+                            <div class="col-sm-8">
+                                <input id="txtloginName" name="txtloginName" type="text" class="form-control" required="" aria-required="true">
                             </div>
                         </div>
                         
-                        <div class="col-sm-12 detail_form">
-                            <label class="control-label col-sm-4" style="width: 25%">详细地址:</label>
-                            <div class="form-group  col-sm-8" style="padding: 0; width: 75%">
-                                <input type="text" class="form-control" name="txtAddress" id="txtAddress" required="required" data-bv-notempty-message="此项为必填项" />
+                        
+                        <div class="form-group" id="pss">
+                            <label class="col-sm-3 control-label">密码：</label>
+                            <div class="col-sm-8">
+                                <input id="txtPassword" name="txtPassword"  type="password" class="form-control" required="" aria-required="true">
                             </div>
                         </div>
                         
-                    </div>
-                </form>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">手机号码：</label>
+                            <div class="col-sm-8">
+                                <input id="txtTel" name="txtTel" type="text" class="form-control" required="" aria-required="true">
+                            </div>
+                        </div>
+                        
 
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">E-mail：</label>
+                            <div class="col-sm-8">
+                                <input id="cemail" type="email" class="form-control" name="txtEmail" id="txtEmail" required="" aria-required="true">
+                            </div>
+                        </div>
+                   
+                        
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">详细地址：</label>
+                            <div class="col-sm-8">
+                                <input id="txtAddress" type="text" class="form-control" name="txtAddress" required="" aria-required="true">
+                            </div>
+                        </div>
+                       
+                        @*<div class="form-group">
+                            <div class="col-sm-4 col-sm-offset-3">
+                                <button class="btn btn-primary" type="button">提交</button>
+                            </div>
+                        </div>*@
+                    </form>
+                </div>
+                
             </div>
             <div class="modal-footer" style="margin-top: 0">
                 <button class="btn btn-primary choice_en" type="button" id="BtnSubmit" onclick="SaveInfo()">保存</button>
@@ -129,10 +178,18 @@
     </div>
 </div>
 
+<script src="~/js/plugins/jeditable/jquery.jeditable.js"></script>
+<!-- Data Tables -->
+<script src="~/js/plugins/dataTables/jquery.dataTables.js"></script>
+<script src="~/js/plugins/dataTables/dataTables.bootstrap.js"></script>
+
+<script src="~/js/plugins/validate/jquery.validate.min.js"></script>
+
 
 <script type="text/javascript">
 
-    $(document).ready(function() {
+    $(document).ready(function () {
+        //$('.dataTables-example').dataTable();
         initData(1);
     });
     //初始化数据
@@ -149,8 +206,8 @@
                     str += "<td>" + data.T[i].Address + "</td>";
                     str += "<td>" + data.T[i].CreateTime + "</td>";  //质保期限
 
-                    str += "<td><a class=\"edit more\" data-toggle=\"modal\" href=\"#mymodal\" onclick=\"Edit('" + data.T[i].UserID + "')\"><span class=\"label label-success \">编辑</span></a>";
-                    str += "<a class=\"edit more\"  href=\"javascript:;\" onclick=\"Delete(this,'" + data.T[i].UserID + "')\"><span class=\"label label-success \">删除</span></a>";
+                    str += "<td><a class=\"btn btn-primary\" data-toggle=\"modal\" href=\"#mymodal\" onclick=\"Edit('" + data.T[i].UserID + "')\">编辑</a>";
+                    str += "<a class=\"btn btn-danger\"  href=\"javascript:;\" onclick=\"Delete(this,'" + data.T[i].UserID + "')\">删除</a>";
                     str += "</td></tr>";
                 }
                 $("#tbody").append(str);
@@ -177,26 +234,26 @@
 
     //保存
     function SaveInfo() {
-       $.ajax({
-           type: "POST",
-           url: '../User/Register',
-           data: $("#form_regist").serialize(),
-           error: function (request) {
-               layer.msg('保存失败!', { icon: 2, time: 1000 });
-           },
-           success: function (data) {
-               if (data == "success") {
-                   layer.msg('保存成功!', { icon: 1, time: 1000 });
-                   initData(1);
-                   clear();
-                   $(".modal_out").click();
-               } else {
-                   layer.msg('保存失败!', { icon: 2, time: 1000 });
-               }
-                 
-           }
+        $.ajax({
+            type: "POST",
+            url: '../User/Register',
+            data: $("#commentForm").serialize(),
+            error: function (request) {
+                layer.msg('保存失败!', { icon: 2, time: 1000 });
+            },
+            success: function (data) {
+                if (data == "success") {
+                    layer.msg('保存成功!', { icon: 1, time: 1000 });
+                    initData(1);
+                    clear();
+                    $(".modal_out").click();
+                } else {
+                    layer.msg('保存失败!', { icon: 2, time: 1000 });
+                }
 
-       });
+            }
+
+        });
     }
 
 
@@ -234,6 +291,7 @@
         $("#pss").hide();
         $.getJSON("../User/GetSingle", { uid: id }, function (data) {
             if (data != "error") {
+                $("#pss").hide();
                 $("#HidUId").val(id);  //编号Id
                 $("#txtRealName").val(data.Username); //用户名
                 $("#txtloginName").val(data.LoginName);  //登录名
