--- a/MTDS.Web/Views/Property/Property.cshtml
+++ b/MTDS.Web/Views/Property/Property.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "test";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<link href="~/js/plugins/layer/skin/layer.css" rel="stylesheet" />
 <link href="~/css/font-awesome.css?v=4.4.0" rel="stylesheet">
 <link href="~/css/plugins/jsTree/style.min.css" rel="stylesheet">
 <link href="~/css/animate.css" rel="stylesheet">
@@ -15,6 +15,8 @@
 <script src="~/js/content.js?v=1.0.0"></script>
 <!-- jsTree plugin javascript -->
 <script src="~/js/plugins/jsTree/jstree.min.js"></script>
+<!-- 弹出层-->
+<script src="~/js/plugins/layer/layer.min.js"></script>
 <style>
     .dataTable th {   
     white-space: nowrap !important;  
@@ -29,21 +31,30 @@
 }
 </style>
 <script type="text/javascript">
-    //删除属性文本框
-    function DelProperty() {
-        if ($("#frmProperty").find("input").length > 1) {
-            $("#img_add").prevAll("input:lt(2)").remove();
-            $("#img_add").prevAll("lable:lt(2)").remove();
-            $("#img_add").prevAll("div:eq(0)").remove();
-        } else {
-            $("#img_add").prev().val("");
-            $("#img_add").prev().prev().val("");
-        }
+    function save_Asset(layer) {
+
+        var json = "{";
+        $(layer).find("input[name='assetPropety']").each(function () {
+            json += "\"" + $(this).attr("id") + "\":\"" + $(this).val() + "\",";  // 获取表单值生成 JSON 格式数据
+        });
+        json = json.substring(0, json.length - 1);
+        json += "}";
+
+        $.post("../Property/saveAsset", { "json": json, assetTypeID: $("#btn_add").prop("name") }, function (data) {
+            if (data == "0") {
+                alert("保存失败！");
+            }
+            if (data == "1") {
+                alert("保存成功！");
+            }
+        });
+
     }
+  
     var oTable;
     function initData(assetTypeID) {
-     
-        $.getJSON("../Property/getPropertyList", { id1: 1, assetTypeID: assetTypeID }, function (data) {
+        $("#btn_add").attr("name", assetTypeID);
+        $.getJSON("../Property/getPropertyList", { assetTypeID: assetTypeID }, function (data) {
             if (data != "error") {
                 var str = "";
                 var head_str = "<tr>";
@@ -92,27 +103,14 @@
                 }
                 $("#t_head").append(head_str);
 
-                //for (var i = 0; i < data.length; i++) {
-                //    str += "<tr class='gradeA'><td>" + data[i].categoryName + "</td>";
-                //    str += "<td>" + data[i].systemCategroyName + "</td>";
-                //    str += "<td>" + data[i].parentAssetTypeName + "</td>";
-                //    str += "<td>" + data[i].AssetTypeName + "</td>";
-                //    for (var j = 0; j < column.length;j++) {
-
-                //        str += "<td>" + data[i][column[j]] + "</td>";
-                //    }
-                //    str += "<td><a class=\"edit more\" data-toggle=\"modal\" href=\"#mymodal\" onclick=\"Edit('" + data[i].ID + "')\"><span class=\"label label-success \">编辑</span></a>";
-                //    str += "<a class=\"edit more\"  href=\"javascript:;\" onclick=\"Delete(this,'" + data[i].ID + "')\"><span class=\"label label-success \">删除</span></a>";
-                //    str += "</td></tr>";
-                //}
-                //$("#t_body").append(str);
+               
                 if (oTable != undefined) {
                     oTable.fnClearTable();
                     oTable.fnDestroy();
                 }
                  oTable = $('#editable').dataTable({
                     "ajax": {
-                        url: "../Property/getPropertyList?assetTypeID",
+                        url: "../Property/getPropertyList",
                         data: { "assetTypeID": "3CFD0EFE-9CF6-4E65-A369-073DBF2ED1D0" },
                         type: "POST"
 
@@ -156,8 +154,6 @@
         return submenu;
     }
     $(document).ready(function () {
-      
-
      
             var html = "<ul>";
             $.getJSON("../Property/getAssetTree", "", function (data) {
@@ -202,64 +198,49 @@
                     }
                 });
             })
-         
-        
-        //导航子菜单
-    
-        //$('#jstree1').jstree({
-
-        //    'core': {
-        //        'check_callback': true
-        //    },
-        //    'plugins': ['types', 'dnd'],
-        //    data: function (obj, callback) {
-        //        var jsonstr = "[]";
-        //        var jsonarray = eval('(' + jsonstr + ')');
-        //        $.ajax({
-        //            type: "POST",
-        //            url: "../Property/getAssetTree",
-        //            dataType: "json",
-        //            async: false,
-        //            success: function (result) {
-        //                var arrays = result.data;
-        //                for (var i = 0 ; i < arrays.length; i++) {
-        //                    var arr = {
-        //                        "id": arrays[i].ID,
-        //                        "parent": arrays[i].ParentId == "root" ? "#" : arrays[i].ParentId,
-        //                        "text": arrays[i].Title
-        //                    }
-        //                    jsonarray.push(arr);
-        //                }
-        //            }
-
-        //        });
-        //        callback.call(this, jsonarray);
-        //    },
-        //    'types': {
-        //        'default': {
-        //            'icon': 'fa fa-folder'
-        //        },
-        //        'html': {
-        //            'icon': 'fa fa-file-code-o'
-        //        },
-        //        'svg': {
-        //            'icon': 'fa fa-file-picture-o'
-        //        },
-        //        'css': {
-        //            'icon': 'fa fa-file-code-o'
-        //        },
-        //        'img': {
-        //            'icon': 'fa fa-file-image-o'
-        //        },
-        //        'js': {
-        //            'icon': 'fa fa-file-text-o'
-        //        }
-
-        //    }
-        //});
-   
    
     });
+  
+    function show_edittable(e) {
+        if ($("#btn_add").prop("name") == null || $("#btn_add").prop("name") == "")
+        {
+     
+            parent.layer.alert('请先从左边树选择一个设备，在点击添加！')
+            return;
+        }
+        //get asset property
+        $.getJSON("../Property/getAssetProperty", { assetTypeID: $("#btn_add").prop("name") }, function (data) {
+            $("#edit_table_body").html("");
+            var html = "";
+            $.each(data, function (i) {
+
+                html += "<tr><td>";
+                html += data[i].Name
+                html += "</td><td>"
+                html += "<input type='text' name='assetPropety' id='" + data[i].Id + "' />"
+                html += "</td></tr>";
+
+            });
+            $("#edit_table_body").append(html);
+
+            parent.layer.open({
+                type: 1,
+                skin: 'layui-layer-rim', //加上边框
+                area: ['320px', '440px'], //宽高
+                content: $("#edit_asset").prop("outerHTML"),
+                btn:['保存','取消'],
+                btn1:function(index ,layero){
+                    save_Asset(layero);
+                    parent.layer.close(index)
+                },
+
+                btn2: function (index, layero) {
+                    parent.layer.close(index)
+                }
+            });
+        });
+    }
+ 
 </script>
 <section id="main-content">
     <div class="ibox float-e-margins">
@@ -275,7 +256,7 @@
               
                 <div class="ibox-content">
                     <div class="">
-                        <a onclick="fnClickAddRow();" href="javascript:void(0);" class="btn btn-primary ">添加行</a>
+                        <a onclick="show_edittable();"  class="btn btn-primary " id="btn_add">添加设备</a>
                     </div>
                     <table class="table table-striped table-bordered table-hover " id="editable" style="width:2000px;">
                         <thead id="t_head">
@@ -286,6 +267,16 @@
         
         </div>
     </div>
-    </div>
-  
+    <div style="display:none">
+        <div id="edit_asset" >
+            <table id="edit_table">
+             
+                <tbody id="edit_table_body">
+
+                </tbody>
+            </table>
+       
+         
+        </div>
+        </div>
 </section>
