--- a/MTDS.Web/Views/Home/Home.cshtml
+++ b/MTDS.Web/Views/Home/Home.cshtml
@@ -31,7 +31,7 @@
                            
                             <li class="divider"></li>
                             <li>
-                                <a href="login.html">安全退出</a>
+                                <a href="../Login/Index">安全退出</a>
                             </li>
                         </ul>
                     </div>
@@ -116,7 +116,9 @@
                     <ul class="nav nav-second-level">
                         <li>
                             <a class="J_menuItem" href="../User/Index">用户管理</a>
-                            <a class="J_menuItem" href="../user/index">用户管理</a>
+                        </li>
+                        <li>
+                            <a class="J_menuItem" href="../User/Index">组织结构</a>
                         </li>
                         <li>
                             <a class="J_menuItem" href="form_builder.html">权限管理</a>
@@ -183,7 +185,7 @@
                     </li>
                 </ul>
             </div>
-            <a href="login.html" class="roll-nav roll-right J_tabExit"><i class="fa fa fa-sign-out"></i> 退出</a>
+            <a href="../Login/Index" class="roll-nav roll-right J_tabExit"><i class="fa fa fa-sign-out"></i> 退出</a>
         </div>
         <div class="row J_mainContent" id="content-main">
             <iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="index_v1.html?v=4.0" frameborder="0" data-id="index_v1.html" seamless></iframe>
